tests/ui/error-codes/E0403.rs
fn foo<T, T>(s: T, u: T) {} //~ ERROR E0403

fn main() {
}
